<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#000000"
            android:text="@string/phone"
            android:layout_below="@+id/name"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:textColor="#000000"
            android:layout_toEndOf="@+id/name"
            android:textSize="30sp"
            android:inputType="text"
            android:hint="@string/name_hint"/>

        <EditText
            android:id="@+id/ph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/phone"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>