<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Udisp"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/Uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/nxt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/next"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Uph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Uname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>